# evm-precompiles

./: Cargo.toml
blake2/: Cargo.toml
blake2/src/: lib.rs
bn128/: Cargo.toml
bn128/src/: lib.rs
curve25519/: Cargo.toml
curve25519/src/: lib.rs
ed25519/: Cargo.toml
ed25519/src/: lib.rs
modexp/: Cargo.toml
modexp/src/: lib.rs
precompile/: Cargo.toml
precompile/src/: lib.rs
sha3fips/: Cargo.toml
sha3fips/src/: lib.rs
simple/: Cargo.toml
simple/src/: error.rs  lib.rs  utils.rs
