[package]
name = "precompile-blake2"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "BLAKE2 precompiles for EVM pallet."

[dependencies]
evm = "0.33.1"
precompile-core = { path = "../precompile" }

