[package]
name = "precompile-bn128"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "BN128 precompiles for EVM pallet."

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
evm = "0.33.1"
primitive-types = { version = "0.10.1", features = ["serde_no_std"] }
precompile-core = { path = "../precompile" }
