[package]
name = "precompile-curve25519"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@webb.tools>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Curve25519 elliptic curve precompiles for EVM pallet."

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
evm = "0.33.1"
primitive-types = { version = "0.10.1", features = ["serde_no_std"] }

precompile-core = { path = "../precompile" }

[dependencies.curve25519-dalek]
version = "4.0.0-dev"
default-features = false
features = ["u64_backend", "alloc"]

