[package]
name = "precompile-ed25519"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "ED25519 precompiles for EVM pallet."

[dependencies]
ed25519-dalek = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }
evm = "0.33.1"

precompile-core = { path = "../precompile" }
