[package]
name = "precompile-modexp"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "MODEXP precompiles for EVM pallet."

[dependencies]
num = { version = "0.4", features = ["alloc"], default-features = false }
evm = "0.33.1"

precompile-core = { path = "../precompile" }
